--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/heart.svg" />
+ 
+    <link rel="icon" type="image/svg+xml" href="/logo_final-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MeeTup</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
